# github-azure-cert-expiry-monitor

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cert_cache.py  check_certificates.py  pyproject.toml  requirements-dev.txt  requirements.txt  slack_notifier.py
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: adhoc-tests.yml  check-certificates.yml  ci.yml  no-cache-ci.yml  security.yml
src/: cert_cache.py  check_certificates.py  slack_notifier.py
tests/: conftest.py  test_cache_and_slack.py  test_certificate_checker.py
