[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-cert-expiry-monitor"
version = "1.0.0"
description = "Azure enterprise app certificate expiration monitor"
authors = [{ name = "Michael Coyle", email = "michael.coyle@accelins.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    "msal>=1.27.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "types-requests>=2.31.0.20240125",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_optional = true
# Allow untyped calls to untyped defs (reduces noise from 3rd party libs)
disallow_untyped_calls = false
# Ignore missing imports for libraries without stubs
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msal.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["check_certificates", "cert_cache", "slack_notifier"]
